# firestations-api

./: Cargo.toml  Dockerfile  docker-compose.yml  justfile
src/: auth.rs  logging.rs  main.rs  openapi.rs  station.rs
