[package]
name = "firestations-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "3.1.4", features = ["actix-web"] }
