[package]
name = "firestations-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
anyhow = "1.0.79"
jsonwebtoken = "9.2.0"
mongodb = "2.8.0"
serde = "1.0.195"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = "3.4.0"
utoipa-swagger-ui = { version = "3.1.4", features = ["actix-web"] }
